@@ -34,6 +34,7 @@ public class INodeFileWithLink extends INodeFile {
 
   public INodeFileWithLink(INodeFile f) throws IOException {
     super(f);
+    next = this;
   }
 
   void setNext(INodeFileWithLink next) {
@@ -42,5 +43,27 @@ public class INodeFileWithLink extends INodeFile {
 
   public INodeFileWithLink getNext() {
     return next;
+  }
+
+  /** Insert inode to the circular linked list. */
+  public void insert(INodeFileWithLink inode) {
+    inode.setNext(this.getNext());
+    this.setNext(inode);
+  }
+
+  /**
+   * @return the max file replication of the elements
+   *         in the circular linked list.
+   */
+  @Override
+  public short getBlockReplication() {
+    short max = getFileReplication();
+    for(INodeFileWithLink i = next; i != this; i = i.getNext()) {
+      final short replication = i.getFileReplication();
+      if (replication > max) {
+        max = replication;
+      }
+    }
+    return max;
   }
 }
